AffiliatedContacts/force-app/main/default/objects/Affiliated_Contact__c/Affiliated_Contact__c.object-meta.xml
<CustomObject>
    <description>Represents a relationship between a CMU-affiliated person (Contact) and a Corporation or Organization (Account).  An Alumnus, Student, Staff, Faculty or Friend of CMU who is an important touchpoint at the Prospect Company/Foundation.</description>
    <label>Affiliated Contact</label>
    <nameField>
        <displayFormat>AC-{0000}</displayFormat>
        <label>Affiliated Contact Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affiliated Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>