AffiliatedContacts/force-app/main/default/objects/Affiliated_Contact__c/fields/Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Affiliation__c</fullName>
    <description>Indicate the nature of this person&apos;s relationship with the company.</description>
    <inlineHelpText>Indicate the nature of this person&apos;s relationship with the company.</inlineHelpText>
    <label>Company Affiliation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Board Member</fullName>
            </value>
            <value>
                <fullName>Advisor</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Assistant</fullName>
            </value>
            <value>
                <fullName>Intern</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>Facilitator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>