AffiliatedContacts/force-app/main/default/objects/Affiliated_Contact__c/fields/Alum__c.field-meta.xml
<CustomField>
    <fullName>Alum__c</fullName>
    <formula>Contact__r.CMU_Alum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alum</label>
    <type>Checkbox</type>
</CustomField>