AffiliatedContacts/force-app/main/default/objects/Affiliated_Contact__c/fields/Main_Liaison__c.field-meta.xml
<CustomField>
    <fullName>Main_Liaison__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The CMU employee cultivating the relationship with this person.  (Could be the CMU employee who identified them as a prospect, initiated contact, or holds a previous relationship with them).</description>
    <inlineHelpText>The CMU employee cultivating the relationship with this person.  (Could be the CMU employee who identified them as a prospect, initiated contact, or holds a previous relationship with them).</inlineHelpText>
    <label>Main Liaison</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Affiliated_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>