AffiliatedContacts/force-app/main/default/objects/Affiliated_Contact__c/fields/Main_School__c.field-meta.xml
<CustomField>
    <fullName>Main_School__c</fullName>
    <description>CMU School cultivating the main relationship with this person. (Not necessarily this person&apos;s Primary School Affiliation or where they have attended or completed degrees)</description>
    <inlineHelpText>CMU School cultivating the main relationship with this person. (Not necessarily this person&apos;s Primary School Affiliation or where they have attended or completed degrees)</inlineHelpText>
    <label>Main School</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>CFA</fullName>
            </value>
            <value>
                <fullName>CIT</fullName>
            </value>
            <value>
                <fullName>CyLab</fullName>
            </value>
            <value>
                <fullName>DC</fullName>
            </value>
            <value>
                <fullName>Heinz</fullName>
            </value>
            <value>
                <fullName>MCS</fullName>
            </value>
            <value>
                <fullName>SCS</fullName>
            </value>
            <value>
                <fullName>Tepper</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>