AffiliatedContacts/force-app/main/default/objects/Affiliated_Contact__c/recordTypes/Advancement_Contact.recordType-meta.xml
<RecordType>
    <fullName>Advancement_Contact</fullName>
    <active>true</active>
    <description>For Bio Team and Advancement</description>
    <label>Advancement Contact</label>
</RecordType>