AffiliatedContacts/force-app/main/default/objects/Affiliated_Contact__c/recordTypes/Organizational_Contact.recordType-meta.xml
<RecordType>
    <fullName>Organizational_Contact</fullName>
    <active>true</active>
    <description>For Corporate and Foundation Relations</description>
    <label>Organizational Contact</label>
</RecordType>